src/objects/QPMS__Complaint_Action_Plan_Root_Cause__c.object
<CustomObject>
    <description>This is junction object between Action Plan and Root Cause.</description>
    <fields>
        <fullName>QPMS__Complaint_Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Action Plan value</description>
        <label>Action Plan</label>
        <referenceTo>QPMS__Complaint_General_Sub_Task__c</referenceTo>
        <relationshipLabel>Complaint Action Plans Root Causes (Action Plan)</relationshipLabel>
        <relationshipName>Complaint_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_Root_Cause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Root Cause value</description>
        <label>Root Cause</label>
        <referenceTo>QPMS__Complaint_General_Sub_Task__c</referenceTo>
        <relationshipLabel>Complaint Action Plans Root Causes (Root Cause)</relationshipLabel>
        <relationshipName>Complaint_Root_Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Root_Cause_Cause_Name__c</fullName>
        <formula>QPMS__Complaint_Root_Cause__r.QPMS__Cause_Code_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Root Cause Cause Name</label>
        <type>Text</type>
    </fields>
    <label>Complaint Action Plan Root Cause</label>
    <nameField>
        <displayFormat>CAPRC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Action Plans Root Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>